[Fix]		Corrected issue with port IDs consisting of more than 3 incremental fields not incrementing as expected
[Fix]		Corrected port ID validation
[Fix]		Prevent duplicate port ID accross entire template
[Fix]		Corrected display of half RU inserts
[Fix]		Resolved database issue when switching cabinet side (Front/Back)
[Enhance]	Increased template partition limit from 20 to 100
[Enhance]	Increased maximum number of vertical template partitions from 10 to 24

**Changes introduced in 0.2.1

[Fix]		Display template image in details box
[Fix]		Allow Administrator role to remove users
[Fix]		Added validation for path finder
[Fix]		Resolved error message when switching cabinet face on 'Explore' page
[Feature]	Template "Where Used"
[Enhance]	Added icon to identify endpoint object boxes
[Enhance]	Ports are represented by icons instead of generic squares
[Enhance]	When cloning templates, include template name and images

**Changes introduced in 0.2.0

[Fix]		Adjusted Restore function to account for out of order items in "03 - Cabinets.csv"
[Fix]		Relocated app images out of public directory.
[Fix]		Fixed port name validation.
[Fix]		Pass Host header through proxy to app server.
[Fix]		Template and floorplan images have been moved out of the app directory to prevent deletion during upgrade or restart.
[Feature]	Objects displayed in cable paths are colored according to template category and are clickable.
[Feature]	Added ability to define enclosure tolerance as strict or loose.
[Feature]	Added ability to clone templates
[Feature]	Improved markup for insert objects and connectable partitions for improved rendering.
[Feature]	Build->Templates: Added template workspace scrolling

**Changes introduced in 0.1.3

[Fix]		Build->Templates: Ports not displaying in connected partitions.
[Fix]		Build->Templates: Removed style border around enclosure input fields.
[Fix]		Prevent port orientation of non-connectable partitions from being editable in Build->Templates Template Details.