@@ -3,7 +3,6 @@ define('QUADODO_IN_SYSTEM', true);
 require_once './includes/header.php';
 require_once './includes/redirectToLogin.php';
 $qls->Security->check_auth_page('operator.php');
-//require_once './includes/templateFunctions.php';
 ?>
 
 <?php require 'includes/header_start.php'; ?>
