@@ -25,6 +25,9 @@ Contents
 [Fix]		Prevent duplicate port ID accross entire template
 [Fix]		Corrected display of half RU inserts
 [Fix]		Resolved database issue when switching cabinet side (Front/Back)
+[Fix]		Resolved issue with legacy enclosure partitions with no tolerance specified causing template clone error
+[Feature]	Administrator block/unblock users
+[Feature]	Administrator disable MFA
 [Enhance]	Increased template partition limit from 20 to 100
 [Enhance]	Increased maximum number of vertical template partitions from 10 to 24
 
